<resources>
    <string name="app_name">SafeAir</string>
    <string name="rooms">Rooms</string>
    <string name="exit">Exit</string>
    <string name="number">Number:</string>
    <string name="humidity">Humidity:</string>
    <string name="change">Change</string>
    <string name="temperature">Temperature:</string>
    <string name="back">Back</string>
    <string name="authorize">Authorization</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="languageTitle">Language</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="uk">uk</string>
    <string name="en">English (en)</string>
</resources>